--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Baris Emre Yalcin",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.12.0",
     "node-sass": "^9.0.0",
     "parcel": "^2.12.0"
   }
