--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@parcel/transformer-sass": "^2.12.0",
     "node-sass": "^9.0.0",
     "parcel": "^2.12.0"
+  },
+  "dependencies": {
+    "core-js": "^3.37.0",
+    "regenerator-runtime": "^0.14.1"
   }
 }
