chore(package.json): prepare project for build

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "recipedia",
   "version": "1.0.0",
   "description": "Recipe application",
+  "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "Baris Emre Yalcin",
   "license": "ISC",
@@ -15,7 +16,7 @@
   },
   "dependencies": {
     "core-js": "^3.37.0",
-    "fractional": "^1.0.0",
+    "fracty": "^1.0.11",
     "regenerator-runtime": "^0.14.1"
   }
 }
